--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ngx-translate/http-loader": "^7.0.0",
     "angular-disable-browser-back-button": "^2.0.0",
     "angular-svg-icon": "^15.0.0",
+    "crypto-js": "^4.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
