--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@angular-devkit/build-angular": "^15.2.3",
     "@angular/cli": "~15.2.3",
     "@angular/compiler-cli": "^15.2.0",
+    "@types/crypto-js": "^4.1.2",
     "@types/jasmine": "~4.3.0",
     "compression-webpack-plugin": "^10.0.0",
     "jasmine-core": "~4.5.0",
