--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/jasmine": "~4.3.0",
     "compression-webpack-plugin": "^10.0.0",
     "jasmine-core": "~4.5.0",
+    "json-minimizer-webpack-plugin": "^4.0.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
